Changes in version 0.3-0
    * added D-Stream
    * improved support for animations
    * new decay models for tNN
    * DSC_Hierarchical and DSC_Kmeans gained min_weight to filter low weight
        micro-clusters before reculstering

Changes in version 0.2-0 (2/21/14)
    * major restructuring

Initial version 0.1-1 (8/16/13)